--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><p class="sub_menu">  মন্দির </p>
                     <ul>
                         <li><a href="Durga_temple.html">দুর্গা মন্দির </a></li>
-                        <li><a href="Te(php).html"> মন্দির </a></li>
+                        <li><a href="Te.html"> মন্দির </a></li>
                         
                     </ul>
                 </li>
